--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,16 +3,20 @@
         "target": "ES2020",
         "module": "commonjs",
         "lib": [
-            "ES2020"
+            "ES2020",
+            "DOM",
+            "DOM.Iterable"
         ],
         "outDir": "./dist",
         "rootDir": "./src",
-        "strict": true,
+        "strict": false,
         "esModuleInterop": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "resolveJsonModule": true,
-        "declaration": true
+        "declaration": true,
+        "moduleResolution": "node",
+        "types": ["node"]
     },
     "include": [
         "src/**/*"
